# QAOA-Graph-Conditioned-Trust-Regions

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  index.html  pyproject.toml  reproduction-environment.yml  run.py  script.js  style.css
.github/workflows/: ci.yml  pages.yml
code/: MANIFEST.in  README.md  pyproject.toml  source_manifest.json
code/specops_gctr/: __init__.py  baselines.py  calibration.py  estimator.py  graphs.py  model.py  optimization.py  pipeline.py  plots.py  qaoa.py  reproduce.py  tables.py
code/src/gctr_repro/: __init__.py  cli.py  evidence_manifest.json
code/src/gctr_repro/bundle/manuscript/: artifact_reproduction_map.json  build_arxiv_archive.py  generate_portfolio_artifacts.py  main.tex  portfolio_artifacts_manifest.json  prx-popular-summary.tex  refs.bib  validate_manuscript.py
code/src/gctr_repro/bundle/manuscript/figures/: specops_gctr_manifest.json
code/src/gctr_repro/bundle/manuscript/source_data/: EDFig2_ShotNoise.csv  Figure2_QueryEfficiency.csv  Figure3_CalibrationAndUncertainty.csv  Figure4_Generalization.csv  Figure5_Ablation.csv  QueryEfficiency_InstanceLevel.csv  README.md
code/src/gctr_repro/bundle/manuscript/tables/: table_confirmatory_gate.tex  table_efficiency.tex  table_portfolio_protocol.tex
code/src/gctr_repro/bundle/portfolio_results/development_v2_tqa_family_gate/: frozen_decision.json  non_audit_traces.jsonl
code/src/gctr_repro/bundle/portfolio_results/heterogeneous_confirmatory_v1/: frozen_protocol.json  traces.jsonl
code/src/gctr_repro/bundle/portfolio_results/heterogeneous_development_v2_tqa_family_gate/: frozen_protocol.json  legacy_model_state.pt  non_audit_traces.jsonl  portfolio_manifest.json
code/src/specops_gctr/: __init__.py  baselines.py  calibration.py  cli.py  graphs.py  losses.py  model.py  plots.py  portfolio.py  portfolio_experiment.py  provenance.py  reproduce.py  risk_control.py
code/tests/: test_code_package.py  test_package.py
code/tools/: build_evidence_manifest.py  check_source_sync.py
configs/: portfolio_development.json  portfolio_heterogeneous_confirmatory.json  portfolio_heterogeneous_development.json  prospective_risk_control_v2.design.json
manuscript/: artifact_reproduction_map.json  build_arxiv_archive.py  generate_portfolio_artifacts.py  main.tex  portfolio_artifacts_manifest.json  refs.bib  validate_manuscript.py
manuscript/figures/: specops_gctr_manifest.json
manuscript/source_data/: EDFig2_ShotNoise.csv  EDFig3_SeedStability.csv  Figure2_QueryEfficiency.csv  Figure3_CalibrationAndUncertainty.csv  Figure4_Generalization.csv  Figure5_Ablation.csv  Figure7_BudgetPolicy.csv  LOFO_InstanceLevel.csv  README.md  meta.json  results.json
manuscript/tables/: portfolio_numbers.tex  table_ablation.tex  table_confirmatory_gate.tex  table_confirmatory_results.tex  table_efficiency.tex  table_policy_comparison.tex  table_portfolio_arms.tex  table_resource_accounting.tex
portfolio_results/development_v2_tqa_family_gate/: angle_labels.json  frozen_protocol.json  legacy_model_state.pt  portfolio_manifest.json  summary.json  traces.jsonl
portfolio_results/heterogeneous_confirmatory_v1/: frozen_decision.json  portfolio_manifest.json  summary.json
portfolio_results/heterogeneous_development_v2_tqa_family_gate/: angle_labels.json  frozen_decision.json  summary.json  traces.jsonl
specops_gctr/: fixed_budget.py  pipeline.py  portfolio.py  portfolio_experiment.py  protocol.py  qaoa.py  reproduce.py  targets.py
tests/: test_fixed_budget.py  test_package.py  test_portfolio.py  test_risk_control.py
