[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "specops-gctr"
version = "3.2.0"
description = "Trainable graph-conditioned trust-region policies for query-efficient QAOA"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Molena Huynh", email = "molena.huynh@jmp.com" }]
keywords = ["QAOA", "quantum computing", "quantum machine learning", "variational quantum algorithms", "MaxCut", "trust region", "graph neural network", "uncertainty quantification", "reproducibility"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=1.21,<3", "scipy>=1.7,<2", "networkx>=2.6,<4", "matplotlib>=3.5,<4", "pandas>=1.3,<4", "torch>=1.12,<3"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["build>=1.0", "pytest>=7.0", "twine>=5.0"]

[project.scripts]
gctr-reproduce = "specops_gctr.reproduce:main"
gctr-optimize = "specops_gctr.cli:main"
gctr-portfolio = "specops_gctr.portfolio_experiment:main"

[project.urls]
Homepage = "https://thmolena.github.io/QAOA-Graph-Conditioned-Trust-Regions/"
Repository = "https://github.com/thmolena/QAOA-Graph-Conditioned-Trust-Regions"
Issues = "https://github.com/thmolena/QAOA-Graph-Conditioned-Trust-Regions/issues"
Paper = "https://arxiv.org/abs/2604.24803"

[tool.setuptools]
packages = ["specops_gctr"]
include-package-data = false
